--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ google-auth==1.18.0
 google-cloud-core==1.3.0
 google-resumable-media==0.5.1
 googleapis-common-protos==1.52.0
+opencv-python==4.3.0.36
