--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ MarkupSafe==1.1.1
 Werkzeug==0.15.2
 Click==7.0
 setuptools==40.3.0
-libleptonica-dev==1.75.3-3
-libtesseract-dev==3.04.01
-libpython3-dev==3.5.1
+libleptonica-dev
+libtesseract-dev
+libpython3-dev
 tesserocr==2.5.1
